[package]
name = "wrong-track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

egui = "0.20"
eframe = "0.20"
glam = "0.22"
rand = "0.8"
slotmap = "1.0"
palette = "0.6"
getrandom = { version = "0.2", features = ["js"] }
svg = "0.13"
base64 = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
